# REALYSM_PedCT

./: .gitignore  DICOM_to_voxelized_phantom.py  README.md  insert_lesions.ipynb  lesions.py  make_dataset.py  pedsilico-pilot.ipynb  preprocess_and_train_device_models.ipynb  pyproject.toml  recon.dcm  requirements.txt  runRender_peds.py  run_xcat.py  selected_xcat_patients.csv  simple_run.py  simulation_test.air  submit_all_renders.sh  submit_one_render.sge  true.raw  true_bkg.raw  true_disk.raw  view_lesions.ipynb  xcist_sims.py
defaults/: Recon_Default.cfg
src/dxcist/: __init__.py  xcist_sims.py
src/dxcist.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
util/: config.py  util.py  util_preprocessing.py  util_testing.py
util/util/: util_classifier_pediatric.py  util_dict.py
